fix: layout bugs smashed

--- a/src/styles/views.sass
+++ b/src/styles/views.sass
@@ -11,7 +11,7 @@
   flex-direction: column
   gap: var(--grid-gap)
   margin: 0 auto
-  padding: 0 8px
+  padding: 12px 8px
   section
     margin: 0 8px
   @include media('>=tablet')
